<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="check_amount">Check Amount</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="check">Check</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="dollar_amount">$%1$.02f</string>
    <string name="enter_location">Enter Location</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="action_save">save</string>
    <string name="action_load">load</string>
</resources>
