<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
<variable
    name="calculator"
    type="com.example.gangadhar.tipcalculator.viewmodel.CalculatorViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:paddingBottom="26dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".view.TipCalculatorActivity"
        tools:showIn="@layout/activity_tipcalculator">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_check_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_check_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/check_amount"
                android:text="@={calculator.inputCheckAmount}"
                android:inputType="numberDecimal"
                android:selectAllOnFocus="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_tip_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/input_layout_check_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/input_tip_percentage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tip_percentage"
                android:text="@={calculator.inputTipPercentage}"
                android:inputType="number"
                android:selectAllOnFocus="true" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/calculation_outputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout_tip_percentage">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bill_amount"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="$20.00"
                    android:text="@{calculator.outputCheckAmount}" />

                <TextView
                    android:id="@+id/bill_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/check"
                    tools:text="Check"
                    android:textAlignment="center" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tip_dollar_amount"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="$11.50"
                    android:text="@{calculator.outputTipAmount}"
                    />

                <TextView
                    android:id="@+id/tip_dollar_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="Tip"
                    android:text="@string/tip"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/total_dollar_amount"
                    style="@style/Base.TextAppearance.AppCompat.Large"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="$31.50"
                    android:text="@{calculator.outputGrandTotal}"
                    />

                <TextView
                    android:id="@+id/total_dollar_amount_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    tools:text="Total"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>
</layout>